<?xml version="1.0"?>
<package format="2">
    <name>pointcloud2_converter</name>
    <version>1.0.0</version>
    <description> HOGE </description>
    <maintainer email="nozomu.ohashi@map4.jp">Nozomu Ohashi</maintainer>
    <author>NozomuOhashi</author>
    <license>NONE</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>pcl_ros</depend>
    <depend>sensor_msgs</depend>
    <depend>map4_point_type</depend>

    <export>
    </export>
</package>
